--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,12 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+<div>
+<h2>Introduction blablaba example text</h2>
+<p>Lorem ipsum dolor sit amet, ad est vide senserit. In vix graeci pericula, an mucius aperiam inermis pro, suas omnis accusam vim et. Ea nostro elaboraret sed, rebum veniam officiis quo an. Est an quas falli evertitur. Nec ei sumo inani animal, ius numquam fierent torquatos et, consulatu conceptam nec an.</p>
+<br></br>
+</div>
+
     {% for post in posts %}
         <div class="post">
             <div class="date">
